feat : 방 정보 출력 수정